--- a/index.html
+++ b/index.html
@@ -481,11 +481,131 @@
     
 
     <div class="col-12">
-        <footer class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
-            <p>&copy; Kite-It.</p>
-        </footer>
+        <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+			<div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
+
+            <div class="form-group">
+
+                <input class="form-control" type="email" name="subscribe_email" placeholder="Enter your email address"
+                    required="required">
+
+            </div>
+
+        </div>
+
     </div>
-		
+
+    <div class="row">
+
+        <div class=" col-lg-12 col-md-12  col-sm-12">
+
+            <div class="subscribe-accept">
+
+                <input type="checkbox" name="subscribe_accept" required="required">
+
+                I agree to the
+
+                <a href="./Myjourneyonline.com.html/privacy.html">Privacy
+                    Policy</a>,
+
+                <a href="./Myjourneyonline.com.html/disclaimer.html">Disclaimer</a>
+
+                and to receive newsletters from Myjourneyonline.html
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <section id="unsubscribe" class="unsubscribe-form content-section text-center">
+        <div class="block text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2>Unsubscribe in just 42 hours and 27 minutes.</h2>
+                        <form class="form" id="unsubscribe-form" method="POST"
+                            action="https://orris0.github.io/orris0/index.html">
+                            <div class="d-none overlay">
+                                <div class="text-center middle">
+                                    <div class="lds-ellipsis">
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="messages">
+                            </div>
+
+                            <div class="col-lg-12 col-md-12">
+
+                                <h5 class="text-center unsub_subheader">We will be very
+                                    sad
+                                    if
+                                    you
+                                    decide to go!</h5>
+
+                            </div>
+
+                            <div class="row">
+
+                                <div class="col-lg-3 col-md-2 col-sm-1"></div>
+
+                                <div class="col-lg-6 col-md-8 col-sm-10 text-center">
+
+                                    <div class="form-group element">
+
+                                        <input class="form-control" type="email" name="email"
+                                            placeholder="Enter your email address" required="required">
+
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12 col-md-12">
+
+                                <div style="text-align:center;">
+
+                                </div>
+
+                            </div>
+
+                            <div class="row">
+
+                                <div class="col-lg-3 col-md-2 col-sm-1"></div>
+
+                                <div class="col-lg-6 col-md-8 col-sm-10 text-center">
+
+                                    <button class="btn btn-danger-2" type="submit"><span>
+                                            Unsubscribe
+                                        </span></button>
+
+                                </div>
+
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <a href="https://orris0.github.io/orris0/index.html"
+        class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <div id="farewell">Come back and visit us soon!</div>
+    <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+        <p>&copy; Kite-It.</p>
+    </div>
+            <p>&copy; Kite-It.</p>
+        </div>
+    </div>
+			</div><!-- end-wrapper --
+    </body>	
     <!-- end wrapper -->
     <div class="row">
 
