--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <link rel="stylesheet" href="./fonts/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
         <link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
         <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
 
         <!-- Favicon-->
