--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="./script.js"></script> 
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		<link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
         
         <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> -->
         <link rel="stylesheet" href="./style[1].css">
