--- a/about.html
+++ b/about.html
@@ -109,6 +109,31 @@
             <![endif]-->
     </head>
     <body>
+		<div class="row">
+    <div class="col-12">
+      <nav role="navigation" id="nav">
+        <input class="trigger" type="checkbox" id="mainNavButton">
+        <label for="mainNavButton" onclick>Menu</label>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./index[1].html">About Us</a></li>
+          <li><a href="./membership.html">Products</a></li>
+          <li><a href="./news.html">Blog</a></li>
+          <li><a href="./starter-page.html">Specials</a></li>
+          <li><a href="./welcome.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div><!-- col-12 -->
+  </div><!-- end-.row -->
+
+  <div class="wrapper">
+    <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+      <h1 id="html5style2h1">StarTrackr!</h1>
+      <div class="col-12">
+        <img class="logo" src="img/flexy-logo.png">
+      </div><!-- end-col-12 -->
+    </header>
+		<!--
         <div class="wrapper">
             <div class="data" id="container">
             
@@ -118,7 +143,7 @@
 			                A full roll-over About Page gallery!
 		                </text>
                     </svg>
-                    -->
+                    --
                     <nav>
                         <ul>
                             <li><a href="about.html" class="current" title="">About Us</a></li>
