--- a/fixed-3col.html
+++ b/fixed-3col.html
@@ -17,10 +17,35 @@
 <link rel = "stylesheet" type = "text/css" href = "fixed.css">
 </head>
 <body>
+	<div class="row">
+    <div class="col-12">
+      <nav role="navigation" id="nav">
+        <input class="trigger" type="checkbox" id="mainNavButton">
+        <label for="mainNavButton" onclick>Menu</label>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./index[1].html">About Us</a></li>
+          <li><a href="./membership.html">Products</a></li>
+          <li><a href="./news.html">Blog</a></li>
+          <li><a href="./starter-page.html">Specials</a></li>
+          <li><a href="./welcome.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div><!-- col-12 -->
+  </div><!-- end-.row -->
+
+  <div class="wrapper">
+    <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+      <h1 id="html5style2h1">StarTrackr!</h1>
+      <div class="col-12">
+        <img class="logo" src="img/flexy-logo.png">
+      </div><!-- end-col-12 -->
+    </header>
+	  <!--
     <div class="wrapper">
 	    <div class="row">
 	        <div class="col-12">        
-                    <header><!--<div id="hdr"> changed to <header>-->
+                    <header><!--<div id="hdr"> changed to <header>--
                         <h1>TourOrris's (Rural Retreats)</h1>
                         <div id="container">
                             <p>&nbsp;</p>
@@ -47,6 +72,7 @@
                             <p>&nbsp;</p>
                         </div>
                     </header>
+	  -->
 <div id="container">
 <div id = "hdr" >Banner/Header</div>
 	<ul>Column 1 Navigation menu
