--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -54,16 +54,40 @@
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./scripts.js"></script>
 </head>
-<!--
+
 	<body>
-	
+		<div class="row">
+    <div class="col-12">
+      <nav role="navigation" id="nav">
+        <input class="trigger" type="checkbox" id="mainNavButton">
+        <label for="mainNavButton" onclick>Menu</label>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./index[1].html">About Us</a></li>
+          <li><a href="./membership.html">Products</a></li>
+          <li><a href="./news.html">Blog</a></li>
+          <li><a href="./starter-page.html">Specials</a></li>
+          <li><a href="./welcome.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div><!-- col-12 -->
+  </div><!-- end-.row -->
+
+  <div class="wrapper">
+    <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+      <h1 id="html5style2h1">StarTrackr!</h1>
+      <div class="col-12">
+        <img class="logo" src="img/flexy-logo.png">
+      </div><!-- end-col-12 -->
+    </header>
+	<!--
 <div class="wrapper">
 	
 	<div class="row" id="header">
 		<div class="col-12">
 			<img class="logo" src="img/flexy-logo.png">
 		</div><!-- end-col-12 --
-	</div><!-- end-header --
+	</div><!-- end-header -->
 	
 	<div id="content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
@@ -204,7 +228,9 @@
 	
 </body>
 	-->
-   <body>
+   <body
+	   <!--
+
     <div class="wrapper">
         <div class="row">
             <div class="col-12">
