--- a/yosemite.html
+++ b/yosemite.html
@@ -27,6 +27,30 @@ Released for free under a Creative Commons Attribution 2.5 License Name : Yosemi
 <![endif]-->
 </head>
 <body>
+	<div class="row">
+    <div class="col-12">
+      <nav role="navigation" id="nav">
+        <input class="trigger" type="checkbox" id="mainNavButton">
+        <label for="mainNavButton" onclick>Menu</label>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./index[1].html">About Us</a></li>
+          <li><a href="./membership.html">Products</a></li>
+          <li><a href="./news.html">Blog</a></li>
+          <li><a href="./starter-page.html">Specials</a></li>
+          <li><a href="./welcome.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div><!-- col-12 -->
+  </div><!-- end-.row -->
+
+  <div class="wrapper">
+    <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+      <h1 id="html5style2h1">StarTrackr!</h1>
+      <div class="col-12">
+        <img class="logo" src="img/flexy-logo.png">
+      </div><!-- end-col-12 -->
+    </header>
 <div id="wrapper">
 	<nav>
 		<ul>
@@ -38,12 +62,14 @@ Released for free under a Creative Commons Attribution 2.5 License Name : Yosemi
 			<li><a href="#">Contact</a></li>
 		</ul>
 	</nav>
+	<!--
 		<header>
 		<div id="logo">
 			<h1>Yosemite</h1>
 			<p> design by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a></p>
 		</div>
 	</header>
+	-->
 	<div id="page">
 		<div class="data" id="#html5style2content">
     <div class="row">
