--- a/services.html
+++ b/services.html
@@ -259,10 +259,35 @@
 </body>
 	-->
     <body>
+		<div class="row">
+    <div class="col-12">
+      <nav role="navigation" id="nav">
+        <input class="trigger" type="checkbox" id="mainNavButton">
+        <label for="mainNavButton" onclick>Menu</label>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./index[1].html">About Us</a></li>
+          <li><a href="./membership.html">Products</a></li>
+          <li><a href="./news.html">Blog</a></li>
+          <li><a href="./starter-page.html">Specials</a></li>
+          <li><a href="./welcome.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div><!-- col-12 -->
+  </div><!-- end-.row -->
+
+  <div class="wrapper">
+    <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+      <h1 id="html5style2h1">StarTrackr!</h1>
+      <div class="col-12">
+        <img class="logo" src="img/flexy-logo.png">
+      </div><!-- end-col-12 -->
+    </header>
+		<!--
         <div class="wrapper">
             <div class="data" id="container">
                 <header>
-                    <!-- svg-text-embed -->
+                    <!-- svg-text-embed --
                     <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px"> <text x="20" y="50" style="font-family:times new roman; font-size:20pt; font-weight:bold; letter-spacing:1px; stroke:black; fill:white;">
 			                <h1>A full page roll-over gallery of Services</h1>
 		                        <h2>Hover the mouse over a small picture to see an enlarged version</h2>
