--- a/index[1].html
+++ b/index[1].html
@@ -140,7 +140,7 @@
     </div><!-- end-row -->
     <!-- <div class="data" id="#html5style2content"> -->
       <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-      <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
+      <div class="row" style="background-color: #3C8BB6; padding: 5% 0 3%;">
         <div class="çol-12">
           <img src="img/paper.png" ;>
 
@@ -249,8 +249,8 @@
         </div><!-- end col-11 -->
       </div> <!-- end class row -->
 
-      <div class="row" style="background-color: #F6931E;">
-        <div class="col-11">
+      <div class="row" style="background-color: #1ABC9C>
+        div class="col-11">
 			<ul id="gallery-3col-mix">
 					<li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali">
 							<img class="hid" src="images/alilarge.jpg" alt=""></a>
@@ -294,7 +294,7 @@
         </div> <!-- end col-3 -->
       </div> <!-- end class row -->
 
-      <div class="row" style="background-color: #1abc9c;">
+      <div class="row" style="background-color: #E5EF3F;">
         <div class="col-10">
           <h2>We're flying around the globe</h2>
           <div id="news">
@@ -313,7 +313,7 @@
         </div><!-- end col-3 -->
       </div>
 
-      <div class="row" style="background-color: #e5ef3f;">
+      <div class="row" style="background-color: #34495E;">
         <div class="col-9">
           <h2>Above the clouds &amp; over the sea.</h2>
           <div>
@@ -410,7 +410,7 @@
       </div><!-- en.row -->
 
 
-      <div class="row" style="background-color: #00afe1;">
+      <div class="row" style="background-color: #34495E">
         <div class="col-7">
           <h2>So come along for the ride!</h2>
           <h3>Around town last night</h3>
@@ -430,13 +430,13 @@
             </ul>
           </div>
           <div class="col-3">
-            <img id="globe" class="circle" src="images/globe.png" width="215px">
+            <img id="globe" class="circle" src="images/globe.png">
           </div>
         </div>
       </div>
-      <div class="row" style="background-color: #00AFE1;">
+      <div class="row" style="background-color: #00AFE1">
         <div class="col-12">
-          <img id="plane-background" src="./img/plane-background.png" width="935px">
+          <img id="plane-background" src="./img/plane-background.png">
         </div>
       </div>
 
