--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -28,7 +28,7 @@
         <meta name="author" content="Orris Baker">
 		
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./script.js"></script> 
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
