--- a/index[1].html
+++ b/index[1].html
@@ -83,7 +83,9 @@
   <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
 
   <!-- Favicon-->
-  <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="./weed.jpg">
+    <link rel="icon" type="image/png" href="./flexy-logo.png">
+  <!-- <link rel="apple-touch-icon" href="./images/apple-touch-icon.png"> -->
   <link rel="alternate" type="application/pdf" href="MainPage.pdf">
   <link rel="author" href="mailto:bakerorris0@gmail.com">
   <!-- Bootstrap Icons-->
