--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
 		<link rel="icon" type="image/jpg" href="./img/logo.jpg">
           
         <link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
-  
+
+		<!--
   
         <link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
-        <!-- 01_lightbox -->
+        <!-- 01_lightbox --
         <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-        <!-- 02_colorbox -->
+        <!-- 02_colorbox --
         <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
         <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
         <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8">
