--- a/index[1].html
+++ b/index[1].html
@@ -32,6 +32,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
 		<link rel="icon" type="image/png" href="./weed.jpg">
+		
+		<link rel="stylesheet" href="./aos.css">
+		<script type="text/javascript" src="./aos.js"></script>
+
+		<link rel="stylesheet" href="./bio.css">
+		
 		<!--
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design --
