--- a/index[1].html
+++ b/index[1].html
@@ -37,25 +37,16 @@
 		<script type="text/javascript" src="./aos.js"></script>
 
 		<link rel="stylesheet" href="./bio.css">
+		<link rel="stylesheet" href="./bootstrap-icons.css">
+		<link rel="stylesheet" href="./bootstrap.bundle.min.js">
+		<link rel="stylesheet" href="./bootstrap.min.css">
+		<link rel="stylesheet" href="./boxicons.min.css">
+		<link rel="stylesheet" href="./coolmenu.js">
+		<link rel="stylesheet" href="./css.css">
+		<link rel="stylesheet" href="./glightbox.min.css">
+		<link rel="stylesheet" href="./glightbox.min.js">
 		
-		<!--
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <!-- Viewport for responsive web design --
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        
-		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> --
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./script.js"></script> 
-        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-        
-        <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> --
-        <link rel="stylesheet" href="./style[1].css">
-        <link rel="stylesheet" href="./nav[1].css">
-        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel="stylesheet" href="./font-awesome.min[1].css">
+		
 		<link rel="icon" type="image/png" href="./flexy-logo.png">
 
 	
