--- a/index[1].html
+++ b/index[1].html
@@ -45,60 +45,35 @@
 		<link rel="stylesheet" href="./css.css">
 		<link rel="stylesheet" href="./glightbox.min.css">
 		<link rel="stylesheet" href="./glightbox.min.js">
+		<link rel="stylesheet" href="./fonts/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
 		
 		
 		<link rel="icon" type="image/png" href="./flexy-logo.png">
 
 	
-  
-	
-  <meta name="google-adsense-account" content="ca-pub-9639638377144073">
-  <meta property="og:title" content="A Basic HTML5 Template">
-  <meta property="og:type" content="website">
-  <meta property="og:description" content="A simple HTML5 Template for new projects.">
-  <meta property="og:image" content="image.png">
-  <meta name="keywords" content="HTML5, Node.js, Jquery">
-  <meta name="author" content="Orris Baker">
-  <!-- document ready --
-  
-	
-  
-  
-  <link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
-  <!-- 01_lightbox --
-  <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-  <!-- 02_colorbox --
-  <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
-  <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-  <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8">
-  
-  <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./fonts/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
-  <link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
-  <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
-  <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
 
-  <!-- Favicon-->
-    <link rel="icon" type="image/png" href="./weed.jpg">
-    <link rel="icon" type="image/png" href="./flexy-logo.png">
-  <!-- <link rel="apple-touch-icon" href="./images/apple-touch-icon.png"> -->
-  <link rel="alternate" type="application/pdf" href="MainPage.pdf">
-  <link rel="author" href="mailto:bakerorris0@gmail.com">
-  <!-- Bootstrap Icons-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-  <!-- SimpleLightbox plugin CSS-->
-  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- Favicon-->
+        <link rel="icon" type="image/png" href="./weed.jpg">
+        <link rel="icon" type="image/png" href="./flexy-logo.png">
+        <!-- <link rel="apple-touch-icon" href="./images/apple-touch-icon.png"> -->
+        <link rel="alternate" type="application/pdf" href="MainPage.pdf">
+        <link rel="author" href="mailto:bakerorris0@gmail.com">
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+        <!-- SimpleLightbox plugin CSS-->
+        <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-    crossorigin="anonymous"></script>
-  <!--Add conditional Javascript-->
-  <!--[if lte IE 8]>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <!--Add conditional Javascript-->
+        <!--[if lte IE 8]>
                 <script src="js/html5.js" type="text/javascript"></script>
-            <![endif]-->
+        <![endif]-->
 </head>
 
 <body>
