--- a/index[1].html
+++ b/index[1].html
@@ -18,13 +18,13 @@
         <meta name="author" content="Orris Baker">
 		
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./script.js"></script> 
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
         
-        <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> -->
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 		<link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./style[1].css">
         <link rel="stylesheet" href="./nav[1].css">
