Fix stylesheet links in index[1].html

--- a/index[1].html
+++ b/index[1].html
@@ -46,10 +46,10 @@
 		<link rel="stylesheet" href="./glightbox.min.css">
 		<link rel="stylesheet" href="./glightbox.min.js">
 		<link rel="stylesheet" href="./fonts/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
+        <link rel="stylesheet" type="text/css" href="./gallery-page-HTML5.css">
+        <link rel="stylesheet" type="text/css" href="./gallery-2col.css">
+        <link rel="stylesheet" type="text/css" href="./gallery-one-col.css">
+        <link rel="stylesheet" type="text/css" href="./gallery-one-col.css">
 		
 		
 		<link rel="icon" type="image/png" href="./flexy-logo.png">
