--- a/index[1].html
+++ b/index[1].html
@@ -49,7 +49,7 @@
         <link rel="stylesheet" type="text/css" href="./gallery-page-HTML5.css">
         <link rel="stylesheet" type="text/css" href="./gallery-2col.css">
         <link rel="stylesheet" type="text/css" href="./gallery-one-col.css">
-        <link rel="stylesheet" type="text/css" href="./gallery-one-col.css">
+        <link rel="stylesheet" type="text/css" href="./churches-style1.css">
 		
 		
 		<link rel="icon" type="image/png" href="./flexy-logo.png">
