--- a/index[1].html
+++ b/index[1].html
@@ -50,6 +50,8 @@
         <link rel="stylesheet" type="text/css" href="./gallery-2col.css">
         <link rel="stylesheet" type="text/css" href="./gallery-one-col.css">
         <link rel="stylesheet" type="text/css" href="./churches-style1.css">
+		<link rel="stylesheet" type="text/css" href="./horiz-vert-menu.css">
+		<link rel="stylesheet" type="text/css" href="./inline-block.css">
 		
 		
 		<link rel="icon" type="image/png" href="./flexy-logo.png">
