Remove duplicate isotope stylesheet links
Removed multiple duplicate stylesheet links for isotope.pkgd.min.js.

--- a/index[1].html
+++ b/index[1].html
@@ -52,6 +52,35 @@
         <link rel="stylesheet" type="text/css" href="./churches-style1.css">
 		<link rel="stylesheet" type="text/css" href="./horiz-vert-menu.css">
 		<link rel="stylesheet" type="text/css" href="./inline-block.css">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		
 		
 		
 		<link rel="icon" type="image/png" href="./flexy-logo.png">
