--- a/index[1].html
+++ b/index[1].html
@@ -54,7 +54,7 @@
 		<link rel="stylesheet" type="text/css" href="./inline-block.css">
 		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
 
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./jquery-1.12.0.min.js">
 		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
 		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
 		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
