Add multiple jQuery scripts and stylesheets

--- a/index[1].html
+++ b/index[1].html
@@ -55,19 +55,20 @@
 		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
 
 		<link rel="stylesheet" type="text/css" href="./jquery-1.12.0.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./jquery-1.7.1.min.js">
+		<link rel="stylesheet" type="text/css" href="./jquery-ui-1.8.17.custom.min.js">
+		<link rel="stylesheet" type="text/css" href="./jquery.color.js">
+		
+		<link rel="stylesheet" type="text/css" href="./jquery.js">
+		<link rel="stylesheet" type="text/css" href="./jquery.jscrollpane.css">
+		<link rel="stylesheet" type="text/css" href="./jquery.jscrollpane.min.js">
+		<link rel="stylesheet" type="text/css" href="./jquery.min.js">
+		<link rel="stylesheet" type="text/css" href="./jquery.mobile-1.0.1.min.css">
+		<link rel="stylesheet" type="text/css" href="./jquery.mobile-1.0.1.min.js">
+		<link rel="stylesheet" type="text/css" href="./jquery.mobile-1.0.min.css">
+		<link rel="stylesheet" type="text/css" href="./jquery.mobile-1.0.min.js">
+		<link rel="stylesheet" type="text/css" href="./jquery.mousewheel.js">
+		
 		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
 		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
 		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
