--- a/index[1].html
+++ b/index[1].html
@@ -69,18 +69,23 @@
 		<link rel="stylesheet" type="text/css" href="./jquery.mobile-1.0.min.js">
 		<link rel="stylesheet" type="text/css" href="./jquery.mousewheel.js">
 		
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
-		<link rel="stylesheet" type="text/css" href="./isotope.pkgd.min.js">
+		<link rel="stylesheet" type="text/css" href="./main.js">
+		<link rel="stylesheet" type="text/css" href="./mainstyle.css">
+		<link rel="stylesheet" type="text/css" href="./menu_items2.js">
+		<link rel="stylesheet" type="text/css" href="./menus.js">
+		<link rel="stylesheet" type="text/css" href="./modernizr.js">
+		<link rel="stylesheet" type="text/css" href="./navigation.css">
+		<link rel="stylesheet" type="text/css" href="./niftycube.js">
+		<link rel="stylesheet" type="text/css" href="./original-menu_items2.js">
+		<link rel="stylesheet" type="text/css" href="./rac.js">
+		<link rel="stylesheet" type="text/css" href="./scroll.css">
+		<link rel="stylesheet" type="text/css" href="./site.js">
+		<link rel="stylesheet" type="text/css" href="./slideshow.js">
+		<link rel="stylesheet" type="text/css" href="./splitter.css">
+		<link rel="stylesheet" type="text/css" href="./squaretabs.css">
+		<link rel="stylesheet" type="text/css" href="./webpack.common.js">
+		<link rel="stylesheet" type="text/css" href="./webpack.config.dev.js">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		
 		
 		
