Refactor CSS links in index[1].html
Removed duplicate CSS links and cleaned up HTML.

--- a/index[1].html
+++ b/index[1].html
@@ -35,7 +35,7 @@
 		
 		<link rel="stylesheet" href="./aos.css">
 		<script type="text/javascript" src="./aos.js"></script>
-
+            <!-- root -->
 		<link rel="stylesheet" href="./bio.css">
 		<link rel="stylesheet" href="./bootstrap-icons.css">
 		<link rel="stylesheet" href="./bootstrap.bundle.min.js">
@@ -85,6 +85,81 @@
 		<link rel="stylesheet" type="text/css" href="./squaretabs.css">
 		<link rel="stylesheet" type="text/css" href="./webpack.common.js">
 		<link rel="stylesheet" type="text/css" href="./webpack.config.dev.js">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+
+		<!-- CSS -->
+
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		
+
+
+		
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		
 		
