Add new CSS file for HTML5 styling

--- a/index[1].html
+++ b/index[1].html
@@ -89,7 +89,7 @@
 
 		<!-- CSS -->
 
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
