Add additional CSS stylesheets to index[1].html

--- a/index[1].html
+++ b/index[1].html
@@ -90,10 +90,11 @@
 		<!-- CSS -->
 
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/base.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/bullets.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/churches-style1.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css">
+		
 		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
