Refactor CSS links in index[1].html
Removed multiple instances of flexboxgrid.css and added various new CSS files.

--- a/index[1].html
+++ b/index[1].html
@@ -94,21 +94,21 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/bullets.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/churches-style1.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/collage-ie.css">	
+		<link rel="stylesheet" type="text/css" href="./CSS/colorbox.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/creative.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/creative.min.css">
 		
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/css3-image-4sides.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/css3-image-whitebdr.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/css3-image2.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/css3-para-shadow.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs-ie.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/css3-text-shadow.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/equal-2d.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/feedback.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
 		
 
 
