--- a/index[1].html
+++ b/index[1].html
@@ -109,18 +109,15 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/equal-2d.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/feedback.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/fixed.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/four-col-no-tables.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop10px.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px-fullpage.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px.css">
 		
-
-
-		
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
