--- a/index[1].html
+++ b/index[1].html
@@ -118,7 +118,7 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px-fullpage.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px.css">
 		
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
