Add multiple CSS stylesheets to index[1].html

--- a/index[1].html
+++ b/index[1].html
@@ -119,6 +119,17 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px.css">
 		
 		<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gallery-ie7.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/grad-pic-text.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gradient-style-HTML5.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gradient-style.css">
+		
+		<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
