Replace gallery CSS links with new stylesheets

--- a/index[1].html
+++ b/index[1].html
@@ -127,9 +127,9 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/gradient-style-HTML5.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/gradient-style.css">
 		
-		<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/ie-6-style.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/inset-active.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/jScrollPane.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
