Add lightbox and bxslider stylesheets

--- a/index[1].html
+++ b/index[1].html
@@ -130,8 +130,8 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/ie-6-style.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/inset-active.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/jScrollPane.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/lightbox.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/jquery.bxslider.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
