Add multiple CSS stylesheets to index[1].html

--- a/index[1].html
+++ b/index[1].html
@@ -132,13 +132,13 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/jScrollPane.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/lightbox.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/jquery.bxslider.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/liquid-maxmin.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/liquid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/main.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/multiple-css2.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/nav-style.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/nifty-tabs.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/niftyCorners.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
