--- a/index[1].html
+++ b/index[1].html
@@ -139,13 +139,13 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/nav-style.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/nifty-tabs.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/niftyCorners.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/pay-cards.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/portraits-drop.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/portraits-html5-captions.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/portraits-html5.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/portraits.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/position-video.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/print.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
