Add new CSS stylesheets and remove duplicates

--- a/index[1].html
+++ b/index[1].html
@@ -146,12 +146,13 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/portraits.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/position-video.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/print.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
+		
+		<link rel="stylesheet" type="text/css" href="./CSS/rosette.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/search.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/shadow-fullpage-extendable.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/shadow-fullpage.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/shadow-paragraph-8-6b.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/shadow-paragraph.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
