Update favicon and comment structure in HTML

--- a/index[1].html
+++ b/index[1].html
@@ -32,10 +32,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
 		<link rel="icon" type="image/png" href="./weed.jpg">
-		
+		<link rel="icon" type="image/png" href="./flexy-logo.png">
+		<!--
 		<link rel="stylesheet" href="./aos.css">
 		<script type="text/javascript" src="./aos.js"></script>
-            <!-- root -->
+            <!-- root --
 		<link rel="stylesheet" href="./bio.css">
 		<link rel="stylesheet" href="./bootstrap-icons.css">
 		<link rel="stylesheet" href="./bootstrap.bundle.min.js">
@@ -87,7 +88,7 @@
 		<link rel="stylesheet" type="text/css" href="./webpack.config.dev.js">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 
-		<!-- CSS -->
+		<!-- CSS --
 
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/base.css">
