Update stylesheet links in index[1].html
Comment out the font-awesome stylesheet link and remove duplicate fixed.css link.

--- a/index[1].html
+++ b/index[1].html
@@ -110,9 +110,9 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/equal-2d.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/feedback.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/fixed.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> -->
 		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css">
+		<!-- <link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css"> 
 		<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/four-col-no-tables.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop10px.css">
