--- a/index[1].html
+++ b/index[1].html
@@ -36,7 +36,7 @@
 		
 		<link rel="stylesheet" href="./aos.css">
 		<script type="text/javascript" src="./aos.js"></script>
-            <!-- root --
+            <!-- root -->
 		<link rel="stylesheet" href="./bio.css">
 		<link rel="stylesheet" href="./bootstrap-icons.css">
 		<link rel="stylesheet" href="./bootstrap.bundle.min.js">
