--- a/index[1].html
+++ b/index[1].html
@@ -88,7 +88,7 @@
 		<link rel="stylesheet" type="text/css" href="./webpack.config.dev.js">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 
-		<!-- CSS --
+		<!-- CSS -->
 
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/base.css">
