--- a/index[1].html
+++ b/index[1].html
@@ -112,7 +112,7 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> -->
 		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-		<!-- <link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css"> 
+		<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css"> 
 		<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/four-col-no-tables.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop10px.css">
