--- a/index[1].html
+++ b/index[1].html
@@ -69,7 +69,7 @@
 		<link rel="stylesheet" type="text/css" href="./jquery.mobile-1.0.min.css">
 		<link rel="stylesheet" type="text/css" href="./jquery.mobile-1.0.min.js">
 		<link rel="stylesheet" type="text/css" href="./jquery.mousewheel.js">
-		
+		<!--
 		<link rel="stylesheet" type="text/css" href="./main.js">
 		<link rel="stylesheet" type="text/css" href="./mainstyle.css">
 		<link rel="stylesheet" type="text/css" href="./menu_items2.js">
@@ -88,7 +88,7 @@
 		<link rel="stylesheet" type="text/css" href="./webpack.config.dev.js">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 
-		<!-- CSS -->
+		<!-- CSS --
 
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/base.css">
@@ -110,7 +110,7 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/equal-2d.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/feedback.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
-		<link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> -->
+		<link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> 
 		<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css"> 
 		<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.min.css">
@@ -173,7 +173,7 @@
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		<link rel="stylesheet" type="text/css" href="./flexboxgrid.css">
 		
-		
+		-->
 		
 		<link rel="icon" type="image/png" href="./flexy-logo.png">
 
