--- a/index[1].html
+++ b/index[1].html
@@ -33,10 +33,10 @@
         <link rel="stylesheet" href="./font-awesome.min[1].css">
 		<link rel="icon" type="image/png" href="./weed.jpg">
 		<link rel="icon" type="image/png" href="./flexy-logo.png">
-		
+		<!--
 		<link rel="stylesheet" href="./aos.css">
 		<script type="text/javascript" src="./aos.js"></script>
-            <!-- root -->
+             root --
 		<link rel="stylesheet" href="./bio.css">
 		<link rel="stylesheet" href="./bootstrap-icons.css">
 		<link rel="stylesheet" href="./bootstrap.bundle.min.js">
