--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -46,19 +46,20 @@
   <meta property="og:image" content="image.png">
   <meta name="keywords" content="HTML5, Node.js, Jquery">
   <meta name="author" content="Orris Baker">
-  <!-- document ready -->
+  <!-- document ready --
   <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="./scripts.js"></script>
+		
   <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
   <link rel="stylesheet" href="./style[1].css">
   <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
-  <!-- 01_lightbox -->
+  <!-- 01_lightbox --
   <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-  <!-- 02_colorbox -->
+  <!-- 02_colorbox --
   <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
   <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
   <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8">
@@ -71,14 +72,14 @@
   <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
 
-  <!-- Favicon-->
+  <!-- Favicon--
   <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
   <link rel="alternate" type="application/pdf" href="MainPage.pdf">
   <link rel="author" href="mailto:bakerorris0@gmail.comcom">
   <!-- Bootstrap Icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
   <!-- SimpleLightbox plugin CSS-->
-  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet"> -->
+  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet"> --
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
