--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
-        <title>Gallery-page-Templates</title>
+        <title>html5-ch1-7-Templates</title>
         <!--
         The following 2 meta tags *must* come first in the <head>
 	        to consistently ensure proper document rendering.
