--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -76,20 +76,19 @@
   <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
   <link rel="alternate" type="application/pdf" href="MainPage.pdf">
   <link rel="author" href="mailto:bakerorris0@gmail.comcom">
-  <!-- Bootstrap Icons-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-  <!-- SimpleLightbox plugin CSS-->
-  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet"> --
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap Icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- SimpleLightbox plugin CSS-->
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet"> --
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-    crossorigin="anonymous"></script>
-  <!--Add conditional Javascript-->
-  <!--[if lte IE 8]>
-                <script src="js/html5.js" type="text/javascript"></script>
-            <![endif]-->
-</head>
+    <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <!--Add conditional Javascript-->
+    <!--[if lte IE 8]>
+        <script src="js/html5.js" type="text/javascript"></script>
+    <![endif]-->
+    </head>
     <body>
         <div class="row">
             <div class="col-12">
